--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
      </tbody>
  </table>
 
+ <div class="update">
+
+    <h1>editar Usuario</h1>
+
+    <form action="" id="form2" method="post">
+        <input type="text" name="name" >
+        <br><br>
+
+        <input type="text" name="email" >
+        <br><br>
+
+        <input type="text" name="contact" >
+        <br><br>
+
+        <input type="submit" name="btn">
+       
+    </form>
+
+
+ </div>
+
  <script src="/js/index.js"></script>
     
 </body>
