--- a/add.html
+++ b/add.html
@@ -10,7 +10,7 @@
 
     <h1>Adicionar Usuario</h1>
 
-    <form action="" id="form" method="post">
+    <form action="index.html" id="form">
         <input type="text" name="name" placeholder="Nome">
         <br><br>
 
@@ -20,7 +20,7 @@
         <input type="text" name="contact" placeholder="Contato">
         <br><br>
 
-        <input type="submit">
+        <input type="submit" name="btn">
        
     </form>
 
